[package]
name = "cyberdeck-client-web-sys"
version = "0.1.0"
edition = "2021"
authors = ["Gordon Stein"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.61"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["RtcPeerConnection", "RtcSessionDescription", "RtcDataChannel", "Document", "Window", "Element", "RtcConfiguration", "Request", "RequestInit", "RequestMode", "Response", "RtcSessionDescriptionInit"] }
