[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
bytes = "1.1.0"
rand = "0.8.5"
axum = {version = "0.5.13", features = ["headers"]}
tower-http = { version = "0.3.0", features = ["cors"] }
cyberdeck = {path = "../../.."}
dashmap = "5.4.0"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
parking_lot = "0.12.1"
portable-atomic = "1.3.2"
